--- a/app/alurapic/public/partials/foto.html
+++ b/app/alurapic/public/partials/foto.html
@@ -1,1 +1,46 @@
-<h1>Cadastro de Fotos</h1>
+<div class="page-header text-center">
+    <h1>{{foto.titulo}}</h1>
+</div>
+
+<form name="formulario" class="row" ng-submit="submeter()" novalidate >
+    
+    <div class="col-md-6">
+        
+        <p ng-show="mensagem.length" class="alert alert-info">{{mensagem}}</p>
+        
+        <div class="form-group" >
+            <label>Título</label>
+            <input name="titulo" class="form-control" ng-model="foto.titulo" required />    
+            
+            <span ng-show="formulario.$submitted && formulario.titulo.$error.required" class="form-control alert-danger">Campo obrigatório</span>
+            
+        </div>
+        
+        
+        <div class="form-group">
+            <label>URL</label>
+            <input name="url" class="form-control" ng-model="foto.url" required/>
+            <span ng-show="formulario.$submitted && formulario.url.$error.required" class="form-control alert-danger">Campo obrigatório</span>
+        </div>
+        
+        <div class="form-group">
+            <label>Descrição</label>
+            <textarea name="descricao" class="form-control" ng-model="foto.descricao" />
+            </textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary" ng-disabled="formulario.$invalid">
+            Salvar
+        </button>
+        
+         <a href="/" class="btn btn-primary">Voltar</a>
+         
+        <hr>
+        
+    </div>
+    
+    <div class="col-md-6">
+        <minha-foto url="{{foto.url}}" />
+    </div>
+    
+</form>
