--- a/app/alurapic/public/partials/foto.html
+++ b/app/alurapic/public/partials/foto.html
@@ -9,6 +9,19 @@
         <p ng-show="mensagem.length" class="alert alert-info">{{mensagem}}</p>
         
         <div class="form-group" >
+            <label>Grupo</label>
+            <select name="grupo" class="form-control" required
+                ng-model="foto.grupo"
+                ng-controller="GruposController"    
+                ng-options="grupo._id as (grupo.nome | uppercase) for grupo in grupos">
+                <option value="">Escolha um grupo</option>
+            </select>
+            <span ng-show="formulario.$submitted && formulario.grupo.$error.required" class="form-control alert-danger">
+                Grupo obrigatório
+            </span>
+        </div>
+        
+        <div class="form-group" >
             <label>Título</label>
             <input name="titulo" class="form-control" ng-model="foto.titulo" required />    
             
