--- a/app/alurapic/public/partials/principal.html
+++ b/app/alurapic/public/partials/principal.html
@@ -50,4 +50,10 @@
         </meu-painel>
 
     </div>
+    
+    <div class="row">
+        
+        <meus-titulos></meus-titulos>
+        
+    </div>
 </div>
