--- a/app/alurapic/public/partials/foto.html
+++ b/app/alurapic/public/partials/foto.html
@@ -46,7 +46,7 @@
             Salvar
         </button>
         
-         <a href="/" class="btn btn-primary">Voltar</a>
+         <a href="/" class="btn btn-primary" foca-apos-cadastro-da-foto>Voltar</a>
          
         <hr>
         
